--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Monda:wght@400;700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="ressources/css/styles.css">
     <title>Ed Donassi M.</title>
 </head>
 <body>
-    <h1>My Portfolio</h1>
-    <h1>My Portfolio</h1>
+    <header>
+        <a href=""><h1>Ed Donassi</h1></a>
+        <nav>
+            <ul>                
+                <li><a href="">About Me</a></li>
+                <li><a href="">Skills</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>            
+        </nav>
+        <img src="ressources/images/menu.png" alt="menu icon">
+    </header>
+    <main>
 
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
