--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
 <body>
     <header>
         <a href=""><h1>Ed Donassi</h1></a>
-        <nav>
+        <img id="menu-icon" src="ressources/images/menu.png" alt="menu icon">
+        <nav class="links" >
             <ul>                
-                <li><a href="">About Me</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Contact</a></li>
+                <li class="link"><a href="">About Me</a></li>
+                <li class="link"><a href="">Skills</a></li>
+                <li class="link"><a href="">Projects</a></li>
+                <li class="link"><a href="">Contact</a></li>
             </ul>            
         </nav>
-        <img src="ressources/images/menu.png" alt="menu icon">
     </header>
     <main>
+        <div class="box">
+            Test-Box
+        </div>
 
     </main>
     <footer>
 
     </footer>
 </body>
+<script src="ressources/javascript/app.js"></script>
 </html>
