--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Monda:wght@400;700&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" type="text/css" href="ressources/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Proza+Libre:wght@600;700&display=swap" rel="stylesheet">     <link rel="stylesheet" type="text/css" href="ressources/css/styles.css">
     <title>Ed Donassi M.</title>
 </head>
 <body>
@@ -15,8 +12,8 @@
         <a href=""><h1>Ed Donassi</h1></a>
         <img id="menu-icon" src="ressources/images/menu.png" alt="menu icon">
         <nav class="links" >
-            <ul>                
-                <li class="link"><a href="">About Me</a></li>
+            <ul id="links">                
+                <li class="link"><a href="#">About Me</a></li>
                 <li class="link"><a href="">Skills</a></li>
                 <li class="link"><a href="">Projects</a></li>
                 <li class="link"><a href="">Contact</a></li>
@@ -24,9 +21,30 @@
         </nav>
     </header>
     <main>
-        <div class="box">
-            Test-Box
-        </div>
+        <section class="section about-me">
+            <h2>About me</h2>
+            <div class="about-me-text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam obcaecati deserunt eligendi in consequatur perspiciatis nobis, labore nihil magnam iste. Provident nam ratione nihil qui ipsam eveniet, unde rerum ex!</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque labore totam ab quibusdam voluptatem rem voluptate. Error dolore iusto itaque enim quidem dolor quas quis pariatur fuga? Aliquam, sit quasi.</p>
+            </div>
+            <div class="about-me-image">
+                <img src="" alt="">
+            </div>
+
+        </section>
+        <section class="section skills">
+            <h2>Skills</h2>
+
+        </section>
+        <section class="section projects">
+            <h2>Projects</h2>
+
+        </section>
+        <section class="section contact">
+            <h2>Contact</h2>
+
+        </section>
 
     </main>
     <footer>
