--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <img id="menu-icon" src="ressources/images/menu.png" alt="menu icon">
         <nav class="links" >
             <ul id="links">                
-                <li class="link"><a href="#">About Me</a></li>
-                <li class="link"><a href="">Skills</a></li>
-                <li class="link"><a href="">Projects</a></li>
-                <li class="link"><a href="">Contact</a></li>
+                <li id="link"><a href="#">About Me</a></li>
+                <li id="linki"><a href="">Skills</a></li>
+                <li id="link"><a href="">Projects</a></li>
+                <li id="link"><a href="">Contact</a></li>
             </ul>            
         </nav>
     </header>
@@ -33,7 +33,7 @@
             </div>
 
         </section>
-        <section class="section skills">
+        <section class="section skillss">
             <h2>Skills</h2>
 
         </section>
