--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img id="menu-icon" src="ressources/images/menu.png" alt="menu icon">
         <nav class="links" >
             <ul id="links">                
-                <li id="link"><a href="#">About Me</a></li>
+                <li id="link"><a href="">About Me</a></li>
                 <li id="linki"><a href="">Skills</a></li>
                 <li id="link"><a href="">Projects</a></li>
                 <li id="link"><a href="">Contact</a></li>
@@ -23,13 +23,15 @@
     <main>
         <section class="section about-me">
             <h2>About me</h2>
-            <div class="about-me-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam obcaecati deserunt eligendi in consequatur perspiciatis nobis, labore nihil magnam iste. Provident nam ratione nihil qui ipsam eveniet, unde rerum ex!</p>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque labore totam ab quibusdam voluptatem rem voluptate. Error dolore iusto itaque enim quidem dolor quas quis pariatur fuga? Aliquam, sit quasi.</p>
-            </div>
-            <div class="about-me-image">
-                <img src="" alt="">
+            <div class="inside-about">
+                <div class="about-me-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam obcaecati deserunt eligendi in consequatur perspiciatis nobis, labore nihil magnam iste. Provident nam ratione nihil qui ipsam eveniet, unde rerum ex!</p>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque labore totam ab quibusdam voluptatem rem voluptate. Error dolore iusto itaque enim quidem dolor quas quis pariatur fuga? Aliquam, sit quasi.</p>
+                </div>
+                <div class="about-me-image">
+                    <img src="/ressources/images/photo..png" alt="">
+                </div>
             </div>
 
         </section>
